# twinkle

./: .gitignore  .pre-commit-config.yaml  .pre-commit-config_local.yaml  CONTRIBUTING.md  Dockerfile  INSTALL_CLIENT.ps1  INSTALL_CLIENT.sh  INSTALL_MEGATRON.sh  README.md  README_ZH.md  ROADMAP.md  check_req_id.py  debug_tracker.py  new_feature.txt  pyproject.toml  server_config_4b_e2e.yaml  server_config_4b_e2e_megatron.yaml  setup.cfg  test_multilora_tracker.py  test_ray_configs.py  test_server_multilora.py
.dev_scripts/: ci_container_test.sh  dockerci.sh
.github/: copilot-instructions.md
.github/workflows/: citest.yaml  citest_npu.yaml
client_tools/: client_generator.py
cookbook/: sampler_demo.py
cookbook/client/: server.py  server_config.yaml
cookbook/exp/: dataset.py  dataset_think.py  make_condenser_dataset.py  train_condenser_ddp.py  train_embedding_full_ddp.py  train_embedding_lora_ddp.py  train_streaming_sft.py
cookbook/grpo/: lora.py  lora_gpu.py  lora_npu.py  lora_npu_test.py  lora_npu_torch.py  megatron_lora.py
cookbook/legacy/: lora.py  moe_lora.py  single_controller_sp.py  single_program_full.py  vlm_lora.py
cookbook/megatron/: __init__.py  client.py  ddp.py  ddp.sh  ddp_moe.py  ddp_moe.sh  lora.py  lora_ray.py  moe_lora.py  qwen3_5.py  server.py  tp.py  tp.sh  tp_moe.py  tp_moe.sh  tp_moe_qwen35.py  tp_resume.py  vlm_lora.py
docs/: README.md
notebook/: dpo.ipynb  multi_modal.ipynb  sample.ipynb  self_cognition.ipynb  short_math_grpo.ipynb
scripts/: kernelize_demo.py
skills/: twinkle-training.md
tests/: test_parallelism.py
(+1223 files in other folders)
